--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Author: Tyler Rinker <tyler.rinker@gmail.com>
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends:
     R (>= 3.1.0)
+Imports: knitr
 Suggests:
     knitr,
     testthat,
