--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: goldpack
+Package: pax
 Type: Package
-Title: A Gold Version Package Template
+Title: A pax Version Package Template
 Version: 0.0.1
 Date: 2015-01-05
 Author: Tyler Rinker <tyler.rinker@gmail.com>
@@ -10,11 +10,11 @@ Depends:
 Imports: knitr
 Suggests:
     knitr,
-    testthat,
+    testthat
 LazyData: TRUE
 VignetteBuilder: knitr
 Description: A package templating system that assumes the use of testthat, Travis-CI and covr (coveralls).  
 License: GPL-2
-URL: http://trinker.github.com/goldpack/
-BugReports: http://github.com/trinker/qgoldpack/issues
+URL: http://trinker.github.com/pax/
+BugReports: http://github.com/trinker/qpax/issues
 Roxygen: list(wrap = FALSE)
