--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Suggests:
     testthat
 LazyData: TRUE
 VignetteBuilder: knitr
-Description: A package templating system that assumes the use of testthat, Travis-CI and covr (coveralls).  
+Description: A package templating system that assumes the use of GitHub, RStudio, testthat, Travis-CI and covr (coveralls).  
 License: GPL-2
 URL: http://trinker.github.com/pax/
 BugReports: http://github.com/trinker/qpax/issues
