--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Tyler Rinker <tyler.rinker@gmail.com>
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends:
     R (>= 3.1.0)
-Imports: curl, knitr, RCurl
+Imports: curl, knitr
 Suggests:
     knitr,
     testthat
