* `new_vignette` added to quickly add **rmarkdown** style vignette tempaltes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(is.global)
 export(new_r)
 export(new_r_test)
 export(new_test)
+export(new_vignette)
 export(pax)
 export(pax_options)
 export(ploc)
