--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2015-07-30
 Author: Tyler Rinker <tyler.rinker@gmail.com>
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends: R (>= 3.1.0)
-Imports: curl, rmarkdown
+Imports: curl, rmarkdown, utils
 Suggests: testthat, knitr
 LazyData: TRUE
 Description: A templating system for R packages that assumes the use of
