added Thumbs.db for widows users

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,23 @@ Package: pax
 Type: Package
 Title: A Package Templating Package
 Version: 0.1.0
-Date: 2015-11-23
+Date: 2016-03-20
 Author: Tyler Rinker <tyler.rinker@gmail.com>
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
-Depends: R (>= 3.1.0)
-Imports: curl, rmarkdown, utils
-Suggests: testthat, knitr
+Depends:
+    R (>= 3.1.0)
+Imports:
+    curl,
+    rmarkdown,
+    utils
+Suggests:
+    testthat,
+    knitr
 LazyData: TRUE
 Description: A templating system for R packages that assumes the use of
-        GitHub, RStudio, 'testthat', Travis-CI and 'covr' (coveralls).
+    GitHub, RStudio, 'testthat', Travis-CI and 'covr' (coveralls).
 License: GPL-2
 URL: http://trinker.github.com/pax/
 BugReports: http://github.com/trinker/pax/issues
 Roxygen: list(wrap = FALSE)
+RoxygenNote: 5.0.1
