--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,15 @@ Package: pax
 Type: Package
 Title: A Package Templating Package
 Version: 0.2.0
-Date: 2017-10-04
+Date: 2017-12-18
 Author: Tyler Rinker <tyler.rinker@gmail.com>
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends: R (>= 3.1.0)
 Imports: clipr, curl, rmarkdown, utils
 Suggests: testthat, knitr
 LazyData: TRUE
-Description: A templating system for R packages that assumes the use of GitHub, 
-             RStudio, 'testthat', Travis-CI and 'covr' (coveralls).
+Description: A templating system for R packages that assumes the use of GitHub, RStudio, 'testthat', Travis-CI and 'covr'
+             (coveralls).
 License: GPL-2
 URL: http://trinker.github.com/pax/
 BugReports: http://github.com/trinker/pax/issues
